--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "framer-motion": "^11.2.10",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
