--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://joorjeh.github.io",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "node build_posts.js && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "yarn build",
